--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-    Plantilla web "Elementos de Diseño - Bloque 1"
+    
+    Elementos de Diseño - bloque 1
 
     <script src="main.js" async></script>
 </body>
