Se añade detail.html

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
 </head>
 
 <body>
-    
-    Elementos de Diseño - bloque 1
+    <p>Elementos de Diseño - bloque 1</p>
+    <br>
+    <a href="detail.html">Ir a detalle</a> 
 
     <script src="main.js" async></script>
 </body>
