--- a/src/detail.html
+++ b/src/detail.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        @import "head.html"
-        <title>Detail</title>
-    </head>
-<body>
 
-    Página de Detalle
-    
+<head>
+    @import "head.html"
+    <title>Detail</title>
+</head>
+
+<body>
+    @import "header.html"
+    <div class="container">
+        @import "maquinaria-lista.html"
+
+    </div>
+    @import "footer-fixed.html"
 </body>
+
 </html>
