--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     @import "head.html"
-    <title>Elementos Diseño Web</title>
+    <title>ivan fuster garcia</title>
 </head>
 
 <body>
-    <p>Elementos de Diseño - bloque 1</p>
-    <br>
-    <a href="detail.html">Ir a detalle</a> 
-
+    @import "header.html"
+    @import "imagenesinicio.html"
+    @import "formulario.html"
+    @import "footer-fixed.html"
     <script src="main.js" async></script>
 </body>
 
